--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -91,6 +91,12 @@
     "print(\"Shape of data tensor:{}\".format(data.shape))\n",
     "print(\"Shape of label tensor:{}\".format(labels.shape))\n",
     "\n",
+    "#学習データとテストデータに分割\n",
+    "x_test = data[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
+    "y_test = labels[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
+    "data = data[:training_samples + validation_samples]\n",
+    "labels = labels[:training_samples + validation_samples]\n",
+    "\n",
     "# 行列をランダムにシャッフルする\n",
     "indices = np.arange(data.shape[0])\n",
     "np.random.shuffle(indices)\n",
@@ -100,9 +106,7 @@
     "x_train = data[:training_samples]\n",
     "y_train = labels[:training_samples]\n",
     "x_val = data[training_samples: training_samples + validation_samples]\n",
-    "y_val = labels[training_samples: training_samples + validation_samples]\n",
-    "x_test = data[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "y_test = labels[training_samples + validation_samples: training_samples + validation_samples+test_samples]"
+    "y_val = labels[training_samples: training_samples + validation_samples]"
    ]
   },
   {
@@ -243,11 +247,11 @@
      "text": [
       "Train on 8000 samples, validate on 1000 samples\n",
       "Epoch 1/100\n",
-      "8000/8000 [==============================] - 8s 1ms/step - loss: 0.6229 - acc: 0.6508 - macro_precision: 0.6652 - macro_recall: 0.6522 - macro_f_measure: 0.6584 - val_loss: 0.5127 - val_acc: 0.7510 - val_macro_precision: 0.7530 - val_macro_recall: 0.7449 - val_macro_f_measure: 0.7490\n",
+      "8000/8000 [==============================] - 8s 1ms/step - loss: 0.6170 - acc: 0.6644 - macro_precision: 0.7046 - macro_recall: 0.6581 - macro_f_measure: 0.6797 - val_loss: 0.4991 - val_acc: 0.7600 - val_macro_precision: 0.7582 - val_macro_recall: 0.7587 - val_macro_f_measure: 0.7584\n",
       "Epoch 2/100\n",
-      "8000/8000 [==============================] - 6s 756us/step - loss: 0.4312 - acc: 0.8044 - macro_precision: 0.8105 - macro_recall: 0.8049 - macro_f_measure: 0.8076 - val_loss: 0.4840 - val_acc: 0.7640 - val_macro_precision: 0.7648 - val_macro_recall: 0.7629 - val_macro_f_measure: 0.7638\n",
+      "8000/8000 [==============================] - 6s 748us/step - loss: 0.4264 - acc: 0.8109 - macro_precision: 0.8176 - macro_recall: 0.8099 - macro_f_measure: 0.8137 - val_loss: 0.4397 - val_acc: 0.7950 - val_macro_precision: 0.7978 - val_macro_recall: 0.7922 - val_macro_f_measure: 0.7950\n",
       "Epoch 3/100\n",
-      "8000/8000 [==============================] - 6s 755us/step - loss: 0.3153 - acc: 0.8677 - macro_precision: 0.8683 - macro_recall: 0.8678 - macro_f_measure: 0.8680 - val_loss: 0.4961 - val_acc: 0.7830 - val_macro_precision: 0.7822 - val_macro_recall: 0.7793 - val_macro_f_measure: 0.7808\n",
+      "8000/8000 [==============================] - 6s 745us/step - loss: 0.3110 - acc: 0.8750 - macro_precision: 0.8757 - macro_recall: 0.8752 - macro_f_measure: 0.8754 - val_loss: 0.4729 - val_acc: 0.7920 - val_macro_precision: 0.7945 - val_macro_recall: 0.7901 - val_macro_f_measure: 0.7923\n",
       "Epoch 00003: early stopping\n"
      ]
     }
@@ -269,14 +273,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000/1000 [==============================] - 1s 836us/step\n",
-      "[0.5137764253616333, 0.772, 0.7709505290985107, 0.7708815593719482, 0.770889859676361]\n"
+      "1000/1000 [==============================] - 1s 862us/step\n",
+      "[0.7722242164611817, 0.688, 0.6776848149299621, 0.6131743302345276, 0.6317350049018859]\n"
      ]
     }
    ],
    "source": [
     "loss_and_metrics = model.evaluate(x_test, y_test)\n",
     "print(loss_and_metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = model.predict(x_test)\n",
+    "np.savetxt('LSTM_predict.csv', classes, delimiter = ',')"
    ]
   },
   {
