--- a/maluti_parameta.ipynb
+++ b/maluti_parameta.ipynb
@@ -17,6 +17,7 @@
     "from keras.layers import Input, Dense, Embedding, LSTM, Dropout, concatenate\n",
     "from keras.models import Model\n",
     "from keras.callbacks import EarlyStopping\n",
+    "from keras.utils import plot_model\n",
     "import numpy as np"
    ]
   },
@@ -166,6 +167,15 @@
     "print(\"Shape of data tensor:{}\".format(data.shape))\n",
     "print(\"Shape of label tensor:{}\".format(labels.shape))\n",
     "\n",
+    "#学習データとテストデータに分割\n",
+    "x1_test = data[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
+    "x2_test = n_postUser[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
+    "y_test = labels[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
+    "data = data[:training_samples + validation_samples]\n",
+    "labels = labels[:training_samples + validation_samples]\n",
+    "n_postUser = n_postUser[:training_samples + validation_samples]\n",
+    "\n",
+    "\n",
     "# 行列をランダムにシャッフルする\n",
     "indices = np.arange(data.shape[0])\n",
     "np.random.shuffle(indices)\n",
@@ -178,10 +188,7 @@
     "y_train = labels[:training_samples]\n",
     "x1_val = data[training_samples: training_samples + validation_samples]\n",
     "x2_val = users[training_samples: training_samples + validation_samples]\n",
-    "y_val = labels[training_samples: training_samples + validation_samples]\n",
-    "x1_test = data[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "x2_test = users[training_samples + validation_samples: training_samples + validation_samples+test_samples]\n",
-    "y_test = labels[training_samples + validation_samples: training_samples + validation_samples+test_samples]"
+    "y_val = labels[training_samples: training_samples + validation_samples]"
    ]
   },
   {
@@ -320,6 +327,8 @@
     "model = Model(inputs=[p_input, u_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='MultiParameter_model.png')\n",
+    "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
@@ -335,11 +344,11 @@
      "text": [
       "Train on 8000 samples, validate on 1000 samples\n",
       "Epoch 1/100\n",
-      "8000/8000 [==============================] - 8s 1ms/step - loss: 0.6069 - acc: 0.6959 - macro_precision: 0.7127 - macro_recall: 0.6965 - macro_f_measure: 0.7044 - val_loss: 0.4823 - val_acc: 0.7830 - val_macro_precision: 0.8126 - val_macro_recall: 0.7899 - val_macro_f_measure: 0.8011\n",
+      "8000/8000 [==============================] - 8s 1ms/step - loss: 0.6003 - acc: 0.7268 - macro_precision: 0.7489 - macro_recall: 0.7222 - macro_f_measure: 0.7350 - val_loss: 0.4566 - val_acc: 0.8110 - val_macro_precision: 0.8335 - val_macro_recall: 0.8022 - val_macro_f_measure: 0.8175\n",
       "Epoch 2/100\n",
-      "8000/8000 [==============================] - 6s 768us/step - loss: 0.3786 - acc: 0.8437 - macro_precision: 0.8474 - macro_recall: 0.8444 - macro_f_measure: 0.8459 - val_loss: 0.4394 - val_acc: 0.7940 - val_macro_precision: 0.7950 - val_macro_recall: 0.7943 - val_macro_f_measure: 0.7947\n",
+      "8000/8000 [==============================] - 6s 751us/step - loss: 0.3621 - acc: 0.8555 - macro_precision: 0.8587 - macro_recall: 0.8539 - macro_f_measure: 0.8562 - val_loss: 0.4077 - val_acc: 0.8250 - val_macro_precision: 0.8245 - val_macro_recall: 0.8234 - val_macro_f_measure: 0.8239\n",
       "Epoch 3/100\n",
-      "8000/8000 [==============================] - 6s 773us/step - loss: 0.2793 - acc: 0.8868 - macro_precision: 0.8899 - macro_recall: 0.8856 - macro_f_measure: 0.8877 - val_loss: 0.4560 - val_acc: 0.7960 - val_macro_precision: 0.7969 - val_macro_recall: 0.7965 - val_macro_f_measure: 0.7967\n",
+      "8000/8000 [==============================] - 6s 759us/step - loss: 0.2574 - acc: 0.8982 - macro_precision: 0.9005 - macro_recall: 0.8975 - macro_f_measure: 0.8990 - val_loss: 0.4473 - val_acc: 0.8120 - val_macro_precision: 0.8120 - val_macro_recall: 0.8110 - val_macro_f_measure: 0.8115\n",
       "Epoch 00003: early stopping\n"
      ]
     }
@@ -361,14 +370,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000/1000 [==============================] - 1s 826us/step\n",
-      "[0.4262853088378906, 0.802, 0.8055880813598633, 0.7995516538619996, 0.8024162616729736]\n"
+      "1000/1000 [==============================] - 1s 895us/step\n",
+      "[0.7138087067604065, 0.735, 0.6996037750244141, 0.6489026327133178, 0.6639105467796326]\n"
      ]
     }
    ],
    "source": [
     "loss_and_metrics = model.evaluate([x1_test, x2_test], y_test)\n",
     "print(loss_and_metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = model.predict([x1_test, x2_test])\n",
+    "np.savetxt('Mult_predict.csv', classes, delimiter = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['loss', 'acc', 'macro_precision', 'macro_recall', 'macro_f_measure']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.metrics_names"
    ]
   },
   {
