--- a/Model2.ipynb
+++ b/Model2.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -285,21 +285,29 @@
       "==================================================================================================\n",
       "input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           10624       embedding_2[0][0]                \n",
+      "embedding_1 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
       "input_ids (InputLayer)          (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 33)           0           lstm_2[0][0]                     \n",
-      "                                                                 input_ids[0][0]                  \n",
+      "dropout_1 (Dropout)             (None, 50, 50)       0           embedding_1[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 64)           2176        concatenate_2[0][0]              \n",
+      "dence1 (Dense)                  (None, 64)           128         input_ids[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            130         dence[0][0]                      \n",
+      "lstm_1 (LSTM)                   (None, 32)           10624       dropout_1[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_2 (Dropout)             (None, 64)           0           dence1[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)     (None, 96)           0           lstm_1[0][0]                     \n",
+      "                                                                 dropout_2[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dence (Dense)                   (None, 64)           6208        concatenate_1[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_3 (Dropout)             (None, 64)           0           dence[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Dense)                  (None, 2)            130         dropout_3[0][0]                  \n",
       "==================================================================================================\n",
-      "Total params: 1,012,930\n",
-      "Trainable params: 1,012,930\n",
+      "Total params: 1,017,090\n",
+      "Trainable params: 1,017,090\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -311,12 +319,16 @@
     "\n",
     "#テキストの学習\n",
     "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
-    "lstm_out = LSTM(32)(em)\n",
-    "#2つ目のデータと結合\n",
-    "x = concatenate([lstm_out, i_input])\n",
+    "d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32)(d_em)\n",
+    "#2つ目のデータ学習\n",
+    "i2 = Dense(32, activation='relu', name = 'dence1')(i_input)\n",
+    "d_i2 = Dropout(0.5)(i2)\n",
+    "x = concatenate([lstm_out, d_i2])\n",
     "\n",
-    "m2 = Dense(64, activation='relu', name = 'dence')(x)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
+    "m2 = Dense(32, activation='relu', name = 'dence')(x)\n",
+    "d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
     "model = Model(inputs=[p_input, i_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
@@ -338,19 +350,23 @@
      "text": [
       "Train on 8000 samples, validate on 1000 samples\n",
       "Epoch 1/100\n",
-      "8000/8000 [==============================] - 8s 1ms/step - loss: 0.6003 - acc: 0.7268 - macro_precision: 0.7489 - macro_recall: 0.7222 - macro_f_measure: 0.7350 - val_loss: 0.4566 - val_acc: 0.8110 - val_macro_precision: 0.8335 - val_macro_recall: 0.8022 - val_macro_f_measure: 0.8175\n",
+      "8000/8000 [==============================] - 4s 545us/step - loss: 1.0732 - acc: 0.5055 - macro_precision: 0.5048 - macro_recall: 0.5048 - macro_f_measure: 0.5048 - val_loss: 0.6896 - val_acc: 0.5220 - val_macro_precision: 0.7049 - val_macro_recall: 0.5430 - val_macro_f_measure: 0.6128\n",
       "Epoch 2/100\n",
-      "8000/8000 [==============================] - 6s 751us/step - loss: 0.3621 - acc: 0.8555 - macro_precision: 0.8587 - macro_recall: 0.8539 - macro_f_measure: 0.8562 - val_loss: 0.4077 - val_acc: 0.8250 - val_macro_precision: 0.8245 - val_macro_recall: 0.8234 - val_macro_f_measure: 0.8239\n",
+      "8000/8000 [==============================] - 2s 274us/step - loss: 0.7881 - acc: 0.5517 - macro_precision: 0.5543 - macro_recall: 0.5505 - macro_f_measure: 0.5524 - val_loss: 0.6184 - val_acc: 0.6520 - val_macro_precision: 0.7849 - val_macro_recall: 0.6350 - val_macro_f_measure: 0.7017\n",
       "Epoch 3/100\n",
-      "8000/8000 [==============================] - 6s 759us/step - loss: 0.2574 - acc: 0.8982 - macro_precision: 0.9005 - macro_recall: 0.8975 - macro_f_measure: 0.8990 - val_loss: 0.4473 - val_acc: 0.8120 - val_macro_precision: 0.8120 - val_macro_recall: 0.8110 - val_macro_f_measure: 0.8115\n",
-      "Epoch 00003: early stopping\n"
+      "8000/8000 [==============================] - 2s 268us/step - loss: 0.5775 - acc: 0.6943 - macro_precision: 0.7024 - macro_recall: 0.6907 - macro_f_measure: 0.6964 - val_loss: 0.5291 - val_acc: 0.7260 - val_macro_precision: 0.7891 - val_macro_recall: 0.7137 - val_macro_f_measure: 0.7493\n",
+      "Epoch 4/100\n",
+      "8000/8000 [==============================] - 2s 282us/step - loss: 0.4266 - acc: 0.8140 - macro_precision: 0.8202 - macro_recall: 0.8129 - macro_f_measure: 0.8165 - val_loss: 0.4768 - val_acc: 0.8140 - val_macro_precision: 0.8152 - val_macro_recall: 0.8113 - val_macro_f_measure: 0.8132\n",
+      "Epoch 5/100\n",
+      "8000/8000 [==============================] - 2s 269us/step - loss: 0.3346 - acc: 0.8633 - macro_precision: 0.8656 - macro_recall: 0.8621 - macro_f_measure: 0.8638 - val_loss: 0.4803 - val_acc: 0.8110 - val_macro_precision: 0.8150 - val_macro_recall: 0.8074 - val_macro_f_measure: 0.8112\n",
+      "Epoch 00005: early stopping\n"
      ]
     }
    ],
    "source": [
     "history = model.fit([x1_train, x2_train], y_train,\n",
     "                    epochs=100, \n",
-    "                    batch_size=100,\n",
+    "                    batch_size=300,\n",
     "                    validation_data=([x1_val, x2_val], y_val),\n",
     "                    callbacks=[early_stopping])"
    ]
@@ -364,8 +380,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000/1000 [==============================] - 1s 895us/step\n",
-      "[0.7138087067604065, 0.735, 0.6996037750244141, 0.6489026327133178, 0.6639105467796326]\n"
+      "1000/1000 [==============================] - 1s 868us/step\n",
+      "[0.6388055057525635, 0.687, 0.6889715633392334, 0.6191424074172973, 0.6394052810668945]\n"
      ]
     }
    ],
