--- a/maluti_parameta.ipynb
+++ b/maluti_parameta.ipynb
@@ -147,7 +147,7 @@
     "maxlen = 50\n",
     "training_samples = 8000 # training data 80 : validation data 20\n",
     "validation_samples = 1000\n",
-    "test_samples = len(lines) - (training_samples + validation_samples)\n",
+    "test_samples = len(lines) - (training_samples) #+ validation_samples)\n",
     "max_words = 20000\n",
     "\n",
     "# word indexを作成\n",
@@ -344,11 +344,11 @@
      "text": [
       "Train on 8000 samples, validate on 1000 samples\n",
       "Epoch 1/100\n",
-      "8000/8000 [==============================] - 8s 1ms/step - loss: 0.6003 - acc: 0.7268 - macro_precision: 0.7489 - macro_recall: 0.7222 - macro_f_measure: 0.7350 - val_loss: 0.4566 - val_acc: 0.8110 - val_macro_precision: 0.8335 - val_macro_recall: 0.8022 - val_macro_f_measure: 0.8175\n",
+      "8000/8000 [==============================] - 7s 917us/step - loss: 0.5922 - acc: 0.7143 - macro_precision: 0.7394 - macro_recall: 0.7113 - macro_f_measure: 0.7246 - val_loss: 0.4627 - val_acc: 0.8060 - val_macro_precision: 0.8154 - val_macro_recall: 0.8025 - val_macro_f_measure: 0.8089\n",
       "Epoch 2/100\n",
-      "8000/8000 [==============================] - 6s 751us/step - loss: 0.3621 - acc: 0.8555 - macro_precision: 0.8587 - macro_recall: 0.8539 - macro_f_measure: 0.8562 - val_loss: 0.4077 - val_acc: 0.8250 - val_macro_precision: 0.8245 - val_macro_recall: 0.8234 - val_macro_f_measure: 0.8239\n",
+      "8000/8000 [==============================] - 5s 687us/step - loss: 0.3629 - acc: 0.8527 - macro_precision: 0.8568 - macro_recall: 0.8510 - macro_f_measure: 0.8539 - val_loss: 0.4107 - val_acc: 0.8240 - val_macro_precision: 0.8289 - val_macro_recall: 0.8207 - val_macro_f_measure: 0.8248\n",
       "Epoch 3/100\n",
-      "8000/8000 [==============================] - 6s 759us/step - loss: 0.2574 - acc: 0.8982 - macro_precision: 0.9005 - macro_recall: 0.8975 - macro_f_measure: 0.8990 - val_loss: 0.4473 - val_acc: 0.8120 - val_macro_precision: 0.8120 - val_macro_recall: 0.8110 - val_macro_f_measure: 0.8115\n",
+      "8000/8000 [==============================] - 5s 680us/step - loss: 0.2582 - acc: 0.9011 - macro_precision: 0.9022 - macro_recall: 0.9002 - macro_f_measure: 0.9012 - val_loss: 0.4286 - val_acc: 0.8210 - val_macro_precision: 0.8240 - val_macro_recall: 0.8186 - val_macro_f_measure: 0.8213\n",
       "Epoch 00003: early stopping\n"
      ]
     }
@@ -370,8 +370,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000/1000 [==============================] - 1s 895us/step\n",
-      "[0.7138087067604065, 0.735, 0.6996037750244141, 0.6489026327133178, 0.6639105467796326]\n"
+      "1000/1000 [==============================] - 1s 773us/step\n",
+      "[0.6733322334289551, 0.715, 0.7067137284278869, 0.6364665303230286, 0.6575019345283508]\n"
      ]
     }
    ],
