--- a/Model6.ipynb
+++ b/Model6.ipynb
@@ -18,7 +18,13 @@
     "from keras.models import Model\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.utils import plot_model\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "import numpy as np\n",
+    "from keras.utils.np_utils import to_categorical\n",
+    "import keras.backend as K\n",
+    "from functools import partial"
    ]
   },
   {
@@ -139,11 +145,6 @@
     }
    ],
    "source": [
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "import numpy as np\n",
-    "from keras.utils.np_utils import to_categorical\n",
-    "\n",
     "maxlen = 50\n",
     "training_samples = 8000 # training data 80 : validation data 20\n",
     "validation_samples = 1000\n",
@@ -197,9 +198,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keras.backend as K\n",
-    "from functools import partial\n",
-    "\n",
     "def normalize_y_pred(y_pred):\n",
     "    return K.one_hot(K.argmax(y_pred), y_pred.shape[-1])\n",
     "\n",
