--- a/Model3.ipynb
+++ b/Model3.ipynb
@@ -18,7 +18,13 @@
     "from keras.models import Model\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.utils import plot_model\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "import numpy as np\n",
+    "from keras.utils.np_utils import to_categorical\n",
+    "import keras.backend as K\n",
+    "from functools import partial"
    ]
   },
   {
@@ -139,11 +145,6 @@
     }
    ],
    "source": [
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "import numpy as np\n",
-    "from keras.utils.np_utils import to_categorical\n",
-    "\n",
     "maxlen = 50\n",
     "training_samples = 8000 # training data 80 : validation data 20\n",
     "validation_samples = 1000\n",
@@ -193,13 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keras.backend as K\n",
-    "from functools import partial\n",
-    "\n",
     "def normalize_y_pred(y_pred):\n",
     "    return K.one_hot(K.argmax(y_pred), y_pred.shape[-1])\n",
     "\n",
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,19 +283,23 @@
       "==================================================================================================\n",
       "input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "Input_tag (InputLayer)          (None, 5)            0                                            \n",
+      "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_3 (Concatenate)     (None, 55)           0           input_postText[0][0]             \n",
+      "concatenate_2 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
       "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_3 (Embedding)         (None, 55, 55)       1100000     concatenate_3[0][0]              \n",
+      "embedding_2 (Embedding)         (None, 60, 60)       1200000     concatenate_2[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_3 (LSTM)                   (None, 32)           11264       embedding_3[0][0]                \n",
+      "dropout_3 (Dropout)             (None, 60, 60)       0           embedding_2[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            66          lstm_3[0][0]                     \n",
+      "lstm_2 (LSTM)                   (None, 32)           11904       dropout_3[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_4 (Dropout)             (None, 32)           0           lstm_2[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Dense)                  (None, 2)            66          dropout_4[0][0]                  \n",
       "==================================================================================================\n",
-      "Total params: 1,111,330\n",
-      "Trainable params: 1,111,330\n",
+      "Total params: 1,211,970\n",
+      "Trainable params: 1,211,970\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -305,18 +307,19 @@
    ],
    "source": [
     "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
-    "t_input = Input(shape=(5, ), dtype='int32', name='Input_tag')\n",
+    "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
     "\n",
     "x = concatenate([p_input, t_input])\n",
-    "em = Embedding(input_dim=20000, output_dim=55, input_length=55)(x)\n",
-    "lstm_out = LSTM(32)(em)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(lstm_out)\n",
+    "em = Embedding(input_dim=20000, output_dim=60, input_length=60)(x)\n",
+    "d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32)(d_em)\n",
+    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_lstm_out)\n",
     "\n",
     "model = Model(inputs=[p_input, t_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
     "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='MultiParameter_model.png')\n",
-    "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
