--- a/Model4.ipynb
+++ b/Model4.ipynb
@@ -18,7 +18,12 @@
     "from keras.models import Model\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.utils import plot_model\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.utils.np_utils import to_categorical\n",
+    "import keras.backend as K\n",
+    "from functools import partial"
    ]
   },
   {
@@ -139,11 +144,6 @@
     }
    ],
    "source": [
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "import numpy as np\n",
-    "from keras.utils.np_utils import to_categorical\n",
-    "\n",
     "maxlen = 50\n",
     "training_samples = 8000 # training data 80 : validation data 20\n",
     "validation_samples = 1000\n",
@@ -193,13 +193,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keras.backend as K\n",
-    "from functools import partial\n",
-    "\n",
     "def normalize_y_pred(y_pred):\n",
     "    return K.one_hot(K.argmax(y_pred), y_pred.shape[-1])\n",
     "\n",
@@ -273,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,21 +282,38 @@
       "==================================================================================================\n",
       "input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
+      "embedding_3 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           10624       embedding_2[0][0]                \n",
+      "dropout_8 (Dropout)             (None, 50, 50)       0           embedding_3[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "input_ids (InputLayer)          (None, 1)            0                                            \n",
+      "input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 33)           0           lstm_2[0][0]                     \n",
-      "                                                                 input_ids[0][0]                  \n",
+      "input_other2 (InputLayer)       (None, 2)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 64)           2176        concatenate_2[0][0]              \n",
+      "lstm_3 (LSTM)                   (None, 32)           10624       dropout_8[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            130         dence[0][0]                      \n",
+      "dence1 (Dense)                  (None, 16)           32          input_other1[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "dence2 (Dense)                  (None, 16)           48          input_other2[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_9 (Dropout)             (None, 32)           0           lstm_3[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_10 (Dropout)            (None, 16)           0           dence1[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_11 (Dropout)            (None, 16)           0           dence2[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_2 (Concatenate)     (None, 64)           0           dropout_9[0][0]                  \n",
+      "                                                                 dropout_10[0][0]                 \n",
+      "                                                                 dropout_11[0][0]                 \n",
+      "__________________________________________________________________________________________________\n",
+      "dence (Dense)                   (None, 16)           1040        concatenate_2[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_12 (Dropout)            (None, 16)           0           dence[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Dense)                  (None, 2)            34          dropout_12[0][0]                 \n",
       "==================================================================================================\n",
-      "Total params: 1,012,930\n",
-      "Trainable params: 1,012,930\n",
+      "Total params: 1,011,778\n",
+      "Trainable params: 1,011,778\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -308,22 +322,27 @@
    "source": [
     "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
     "o1_input = Input(shape=(1, ), name='input_other1')\n",
-    "o2_input = Input(shape=(1,), name='input_other2')\n",
+    "o2_input = Input(shape=(2,), name='input_other2')\n",
     "\n",
     "#テキストの学習\n",
     "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
-    "lstm_out = LSTM(32)(em)\n",
+    "d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32)(d_em)\n",
+    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "#2つ目の入力\n",
-    "i2 = Dense(64, activation='relu', name = 'dence1')(o1_input)\n",
+    "i2 = Dense(16, activation='relu', name = 'dence1')(o1_input)\n",
+    "d_i2 = Dropout(0.5)(i2)\n",
     "#3つ目の入力\n",
-    "i3 = Dense(64, activation='relu', name = 'dence2')(o2_input)\n",
+    "i3 = Dense(16, activation='relu', name = 'dence2')(o2_input)\n",
+    "d_i3 = Dropout(0.5)(i3)\n",
     "\n",
-    "x = concatenate([lstm_out, i_input])\n",
+    "x = concatenate([d_lstm_out, d_i2, d_i3])\n",
     "\n",
-    "m2 = Dense(64, activation='relu', name = 'dence')(x)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
+    "m2 = Dense(16, activation='relu', name = 'dence')(x)\n",
+    "d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
-    "model = Model(inputs=[p_input, i_input], outputs = output)\n",
+    "model = Model(inputs=[p_input, o1_input, o2_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
     "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model2.png')\n",
