--- a/Model5.ipynb
+++ b/Model5.ipynb
@@ -125,16 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 18881 unique tokens.\n",
-      "Shape of data tensor:(10000, 50)\n",
-      "Shape of label tensor:(10000, 2)\n"
+     "ename": "NameError",
+     "evalue": "name 'lines' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-e7c895148093>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mtraining_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m8000\u001b[0m \u001b[0;31m# training data 80 : validation data 20\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mvalidation_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mtest_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtraining_samples\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mvalidation_samples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mmax_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m20000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'lines' is not defined"
      ]
     }
    ],
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,23 +287,36 @@
       "==================================================================================================\n",
       "input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_userID (InputLayer)       (None, 1)            0                                            \n",
+      "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_1 (Concatenate)     (None, 51)           0           input_postText[0][0]             \n",
-      "                                                                 input_userID[0][0]               \n",
+      "concatenate_2 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
+      "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_1 (Embedding)         (None, 51, 50)       1000000     concatenate_1[0][0]              \n",
+      "embedding_2 (Embedding)         (None, 60, 60)       1200000     concatenate_2[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_1 (Dropout)             (None, 51, 50)       0           embedding_1[0][0]                \n",
+      "dropout_4 (Dropout)             (None, 60, 60)       0           embedding_2[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_1 (LSTM)                   (None, 32)           10624       dropout_1[0][0]                  \n",
+      "input_others (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_2 (Dropout)             (None, 32)           0           lstm_1[0][0]                     \n",
+      "lstm_2 (LSTM)                   (None, 32)           11904       dropout_4[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            66          dropout_2[0][0]                  \n",
+      "dence1 (Dense)                  (None, 16)           32          input_others[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_5 (Dropout)             (None, 32)           0           lstm_2[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_6 (Dropout)             (None, 16)           0           dence1[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_3 (Concatenate)     (None, 48)           0           dropout_5[0][0]                  \n",
+      "                                                                 dropout_6[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dence (Dense)                   (None, 16)           784         concatenate_3[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_7 (Dropout)             (None, 16)           0           dence[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Dense)                  (None, 2)            34          dropout_7[0][0]                  \n",
       "==================================================================================================\n",
-      "Total params: 1,010,690\n",
-      "Trainable params: 1,010,690\n",
+      "Total params: 1,212,754\n",
+      "Trainable params: 1,212,754\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -309,26 +324,29 @@
    ],
    "source": [
     "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
-    "u_input = Input(shape=(1, ), dtype='int32', name='input_userID')\n",
+    "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
+    "o_input = Input(shape=(1,), name='input_others')\n",
     "\n",
-    "\n",
-    "#em = Embedding(input_dim=20000, output_dim=1024, input_length=50)(p_input)\n",
-    "#shered_lstm = LSTM(32)\n",
-    "#p_lstm = shered_lstm(em)\n",
-    "#u_lstm = shered_lstm(u_input)\n",
-    "\n",
-    "x = concatenate([p_input, u_input])\n",
-    "em = Embedding(input_dim=20000, output_dim=50, input_length=51)(x)\n",
+    "#テキストとタグの学習\n",
+    "x = concatenate([p_input, t_input])\n",
+    "em = Embedding(input_dim=20000, output_dim=60, input_length=60)(x)\n",
     "d_em = Dropout(0.5)(em)\n",
     "lstm_out = LSTM(32)(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(d_lstm_out)\n",
     "\n",
-    "model = Model(inputs=[p_input, u_input], outputs = output)\n",
+    "#3つ目のデータ学習\n",
+    "i3 = Dense(16, activation='relu', name='dence1')(o_input)\n",
+    "d_i3 = Dropout(0.5)(i3)\n",
+    "\n",
+    "x2 = concatenate([d_lstm_out, d_i3])\n",
+    "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
+    "d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
+    "\n",
+    "model = Model(inputs=[p_input, t_input, o_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
     "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='MultiParameter_model.png')\n",
-    "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
