--- a/Model8.ipynb
+++ b/Model8.ipynb
@@ -307,22 +307,39 @@
    ],
    "source": [
     "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
-    "i_input = Input(shape=(1, ), name='input_ids')\n",
+    "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
+    "u_input = Input(shape=(1,), name='input_id')\n",
+    "i_input = nput(shape=(1,), name='input_image')\n",
+    "d_input = Input(shape=(2,), name='input_postdate')\n",
     "\n",
-    "#テキストの学習\n",
-    "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
-    "lstm_out = LSTM(32)(em)\n",
-    "#2つ目のデータと結合\n",
-    "x = concatenate([lstm_out, i_input])\n",
+    "#テキストとタグの学習\n",
+    "x = concatenate([p_input, t_input])\n",
+    "em = Embedding(input_dim=20000, output_dim=60, input_length=60)(x)\n",
+    "d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32)(d_em)\n",
+    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
-    "m2 = Dense(64, activation='relu', name = 'dence')(x)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
+    "#3つ目のデータ学習\n",
+    "user = Dense(16, activation='relu', name='dence1')(u_input)\n",
+    "d_user = Dropout(0.5)(user)\n",
     "\n",
-    "model = Model(inputs=[p_input, i_input], outputs = output)\n",
+    "#4つ目のデータ学習\n",
+    "image = Dense(16, activation='relu', name='dence1')(i_input)\n",
+    "d_image = Dropout(0.5)(image)\n",
+    "\n",
+    "#5つ目のデータ学習\n",
+    "pdate = Dense(16, activation='relu', name='dence1')(d_input)\n",
+    "d_pdate = Dropout(0.5)(pdate)\n",
+    "\n",
+    "x2 = concatenate([d_lstm_out, d_user, d_image, d_pdate])\n",
+    "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
+    "d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
+    "\n",
+    "model = Model(inputs=[p_input, t_input, o_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model2.png')\n",
-    "\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model8.png')\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
