--- a/Model6.ipynb
+++ b/Model6.ipynb
@@ -285,19 +285,43 @@
       "__________________________________________________________________________________________________\n",
       "embedding_2 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           10624       embedding_2[0][0]                \n",
+      "dropout_7 (Dropout)             (None, 50, 50)       0           embedding_2[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "input_ids (InputLayer)          (None, 1)            0                                            \n",
+      "input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 33)           0           lstm_2[0][0]                     \n",
-      "                                                                 input_ids[0][0]                  \n",
+      "input_other2 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 64)           2176        concatenate_2[0][0]              \n",
+      "input_other3 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            130         dence[0][0]                      \n",
+      "lstm_2 (LSTM)                   (None, 32)           10624       dropout_7[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dence1 (Dense)                  (None, 16)           32          input_other1[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "dence2 (Dense)                  (None, 16)           32          input_other2[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "dence3 (Dense)                  (None, 16)           32          input_other3[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_8 (Dropout)             (None, 32)           0           lstm_2[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_9 (Dropout)             (None, 16)           0           dence1[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_10 (Dropout)            (None, 16)           0           dence2[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_11 (Dropout)            (None, 16)           0           dence3[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_2 (Concatenate)     (None, 80)           0           dropout_8[0][0]                  \n",
+      "                                                                 dropout_9[0][0]                  \n",
+      "                                                                 dropout_10[0][0]                 \n",
+      "                                                                 dropout_11[0][0]                 \n",
+      "__________________________________________________________________________________________________\n",
+      "dence (Dense)                   (None, 16)           1296        concatenate_2[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_12 (Dropout)            (None, 16)           0           dence[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Dense)                  (None, 2)            34          dropout_12[0][0]                 \n",
       "==================================================================================================\n",
-      "Total params: 1,012,930\n",
-      "Trainable params: 1,012,930\n",
+      "Total params: 1,012,050\n",
+      "Trainable params: 1,012,050\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -305,21 +329,35 @@
    ],
    "source": [
     "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
-    "i_input = Input(shape=(1, ), name='input_ids')\n",
+    "o1_input = Input(shape=(1, ), name='input_other1')\n",
+    "o2_input = Input(shape=(1,), name='input_other2')\n",
+    "o3_input = Input(shape=(1,), name='input_other3')\n",
     "\n",
     "#テキストの学習\n",
     "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
-    "lstm_out = LSTM(32)(em)\n",
-    "#2つ目のデータと結合\n",
-    "x = concatenate([lstm_out, i_input])\n",
+    "d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32)(d_em)\n",
+    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "#2つ目の入力\n",
+    "i2 = Dense(16, activation='relu', name = 'dence1')(o1_input)\n",
+    "d_i2 = Dropout(0.5)(i2)\n",
+    "#3つ目の入力\n",
+    "i3 = Dense(16, activation='relu', name = 'dence2')(o2_input)\n",
+    "d_i3 = Dropout(0.5)(i3)\n",
+    "#4つ目の入力\n",
+    "i4 = Dense(16, activation='relu', name = 'dence3')(o3_input)\n",
+    "d_i4 = Dropout(0.5)(i4)\n",
     "\n",
-    "m2 = Dense(64, activation='relu', name = 'dence')(x)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
+    "x = concatenate([d_lstm_out, d_i2, d_i3, d_i4])\n",
     "\n",
-    "model = Model(inputs=[p_input, i_input], outputs = output)\n",
+    "m2 = Dense(16, activation='relu', name = 'dence')(x)\n",
+    "d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
+    "\n",
+    "model = Model(inputs=[p_input, o1_input, o2_input, o3_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model2.png')\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model6.png')\n",
     "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
