add model images

--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -2,21 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.layers import Input, Dense, Embedding, LSTM, Dropout, concatenate\n",
     "from keras.models import Model\n",
-    "from keras.callbacks import EarlyStopping"
+    "from keras.callbacks import EarlyStopping\n",
+    "from keras.utils import plot_model"
    ]
   },
   {
@@ -111,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,13 +196,9 @@
       "=================================================================\n",
       "input_postText (InputLayer)  (None, 50)                0         \n",
       "_________________________________________________________________\n",
-      "embedding_1 (Embedding)      (None, 50, 50)            1000000   \n",
+      "embedding_2 (Embedding)      (None, 50, 50)            1000000   \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 50, 50)            0         \n",
-      "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                (None, 32)                10624     \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 32)                0         \n",
+      "lstm_2 (LSTM)                (None, 32)                10624     \n",
       "_________________________________________________________________\n",
       "output (Dense)               (None, 2)                 66        \n",
       "=================================================================\n",
@@ -224,14 +213,16 @@
     "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
     "\n",
     "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
-    "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(d_em)\n",
-    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(d_lstm_out)\n",
+    "#d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32)(em)\n",
+    "#d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(lstm_out)\n",
     "\n",
     "model = Model(inputs=p_input, outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
+    "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model1.png')\n",
+    "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
