--- a/Model5.ipynb
+++ b/Model5.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -289,31 +289,23 @@
       "__________________________________________________________________________________________________\n",
       "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
+      "concatenate_1 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
       "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 60, 60)       1200000     concatenate_2[0][0]              \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_4 (Dropout)             (None, 60, 60)       0           embedding_2[0][0]                \n",
+      "embedding_1 (Embedding)         (None, 60, 60)       1200000     concatenate_1[0][0]              \n",
       "__________________________________________________________________________________________________\n",
       "input_others (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           11904       dropout_4[0][0]                  \n",
+      "lstm_1 (LSTM)                   (None, 32)           11904       embedding_1[0][0]                \n",
       "__________________________________________________________________________________________________\n",
       "dence1 (Dense)                  (None, 16)           32          input_others[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_5 (Dropout)             (None, 32)           0           lstm_2[0][0]                     \n",
+      "concatenate_2 (Concatenate)     (None, 48)           0           lstm_1[0][0]                     \n",
+      "                                                                 dence1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_6 (Dropout)             (None, 16)           0           dence1[0][0]                     \n",
+      "dence (Dense)                   (None, 16)           784         concatenate_2[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_3 (Concatenate)     (None, 48)           0           dropout_5[0][0]                  \n",
-      "                                                                 dropout_6[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           784         concatenate_3[0][0]              \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_7 (Dropout)             (None, 16)           0           dence[0][0]                      \n",
-      "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            34          dropout_7[0][0]                  \n",
+      "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
       "Total params: 1,212,754\n",
       "Trainable params: 1,212,754\n",
@@ -330,23 +322,23 @@
     "#テキストとタグの学習\n",
     "x = concatenate([p_input, t_input])\n",
     "em = Embedding(input_dim=20000, output_dim=60, input_length=60)(x)\n",
-    "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(d_em)\n",
-    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "#d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32)(em)\n",
+    "#d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
     "#3つ目のデータ学習\n",
     "i3 = Dense(16, activation='relu', name='dence1')(o_input)\n",
-    "d_i3 = Dropout(0.5)(i3)\n",
+    "#d_i3 = Dropout(0.5)(i3)\n",
     "\n",
-    "x2 = concatenate([d_lstm_out, d_i3])\n",
+    "x2 = concatenate([lstm_out, i3])\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
-    "d_m2 = Dropout(0.5)(m2)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
+    "#d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
     "\n",
     "model = Model(inputs=[p_input, t_input, o_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='MultiParameter_model.png')\n",
+    "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model5.png')\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
