--- a/Model3.ipynb
+++ b/Model3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -285,18 +285,14 @@
       "__________________________________________________________________________________________________\n",
       "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
+      "concatenate_1 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
       "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 60, 60)       1200000     concatenate_2[0][0]              \n",
+      "embedding_1 (Embedding)         (None, 60, 60)       1200000     concatenate_1[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_3 (Dropout)             (None, 60, 60)       0           embedding_2[0][0]                \n",
+      "lstm_1 (LSTM)                   (None, 32)           11904       embedding_1[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           11904       dropout_3[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_4 (Dropout)             (None, 32)           0           lstm_2[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            66          dropout_4[0][0]                  \n",
+      "output (Dense)                  (None, 2)            66          lstm_1[0][0]                     \n",
       "==================================================================================================\n",
       "Total params: 1,211,970\n",
       "Trainable params: 1,211,970\n",
@@ -319,7 +315,7 @@
     "model = Model(inputs=[p_input, t_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='MultiParameter_model.png')\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model3.png')\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
