--- a/Model4.ipynb
+++ b/Model4.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -282,35 +282,25 @@
       "==================================================================================================\n",
       "input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_3 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_8 (Dropout)             (None, 50, 50)       0           embedding_3[0][0]                \n",
+      "embedding_2 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
       "input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
       "input_other2 (InputLayer)       (None, 2)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_3 (LSTM)                   (None, 32)           10624       dropout_8[0][0]                  \n",
+      "lstm_2 (LSTM)                   (None, 32)           10624       embedding_2[0][0]                \n",
       "__________________________________________________________________________________________________\n",
       "dence1 (Dense)                  (None, 16)           32          input_other1[0][0]               \n",
       "__________________________________________________________________________________________________\n",
       "dence2 (Dense)                  (None, 16)           48          input_other2[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_9 (Dropout)             (None, 32)           0           lstm_3[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_10 (Dropout)            (None, 16)           0           dence1[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_11 (Dropout)            (None, 16)           0           dence2[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 64)           0           dropout_9[0][0]                  \n",
-      "                                                                 dropout_10[0][0]                 \n",
-      "                                                                 dropout_11[0][0]                 \n",
+      "concatenate_2 (Concatenate)     (None, 64)           0           lstm_2[0][0]                     \n",
+      "                                                                 dence1[0][0]                     \n",
+      "                                                                 dence2[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
       "dence (Dense)                   (None, 16)           1040        concatenate_2[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_12 (Dropout)            (None, 16)           0           dence[0][0]                      \n",
-      "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            34          dropout_12[0][0]                 \n",
+      "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
       "Total params: 1,011,778\n",
       "Trainable params: 1,011,778\n",
@@ -345,7 +335,7 @@
     "model = Model(inputs=[p_input, o1_input, o2_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model2.png')\n",
+    "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model4.png')\n",
     "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
