--- a/Model6.ipynb
+++ b/Model6.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -283,9 +283,7 @@
       "==================================================================================================\n",
       "input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_7 (Dropout)             (None, 50, 50)       0           embedding_2[0][0]                \n",
+      "embedding_1 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
       "input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
@@ -293,7 +291,7 @@
       "__________________________________________________________________________________________________\n",
       "input_other3 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           10624       dropout_7[0][0]                  \n",
+      "lstm_1 (LSTM)                   (None, 32)           10624       embedding_1[0][0]                \n",
       "__________________________________________________________________________________________________\n",
       "dence1 (Dense)                  (None, 16)           32          input_other1[0][0]               \n",
       "__________________________________________________________________________________________________\n",
@@ -301,24 +299,14 @@
       "__________________________________________________________________________________________________\n",
       "dence3 (Dense)                  (None, 16)           32          input_other3[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_8 (Dropout)             (None, 32)           0           lstm_2[0][0]                     \n",
+      "concatenate_1 (Concatenate)     (None, 80)           0           lstm_1[0][0]                     \n",
+      "                                                                 dence1[0][0]                     \n",
+      "                                                                 dence2[0][0]                     \n",
+      "                                                                 dence3[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_9 (Dropout)             (None, 16)           0           dence1[0][0]                     \n",
+      "dence (Dense)                   (None, 16)           1296        concatenate_1[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_10 (Dropout)            (None, 16)           0           dence2[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_11 (Dropout)            (None, 16)           0           dence3[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 80)           0           dropout_8[0][0]                  \n",
-      "                                                                 dropout_9[0][0]                  \n",
-      "                                                                 dropout_10[0][0]                 \n",
-      "                                                                 dropout_11[0][0]                 \n",
-      "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           1296        concatenate_2[0][0]              \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_12 (Dropout)            (None, 16)           0           dence[0][0]                      \n",
-      "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            34          dropout_12[0][0]                 \n",
+      "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
       "Total params: 1,012,050\n",
       "Trainable params: 1,012,050\n",
@@ -357,7 +345,7 @@
     "model = Model(inputs=[p_input, o1_input, o2_input, o3_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model6.png')\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model6.png')\n",
     "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
