--- a/Model7.ipynb
+++ b/Model7.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,42 +283,32 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_postText (InputLayer)     (None, 50)           0                                            \n",
+      "Input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
       "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_1 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
+      "merge1 (Concatenate)            (None, 60)           0           Input_postText[0][0]             \n",
       "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_1 (Embedding)         (None, 60, 60)       1200000     concatenate_1[0][0]              \n",
+      "Embedding (Embedding)           (None, 60, 60)       1200000     merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_1 (Dropout)             (None, 60, 60)       0           embedding_1[0][0]                \n",
+      "Input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_other1 (InputLayer)       (None, 1)            0                                            \n",
+      "Input_other2 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_other2 (InputLayer)       (None, 1)            0                                            \n",
+      "LSTM (LSTM)                     (None, 32)           11904       Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_1 (LSTM)                   (None, 32)           11904       dropout_1[0][0]                  \n",
+      "dence1 (Dense)                  (None, 16)           32          Input_other1[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "dence1 (Dense)                  (None, 16)           32          input_other1[0][0]               \n",
+      "dence2 (Dense)                  (None, 16)           32          Input_other2[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "dence2 (Dense)                  (None, 16)           32          input_other2[0][0]               \n",
+      "merge2 (Concatenate)            (None, 64)           0           LSTM[0][0]                       \n",
+      "                                                                 dence1[0][0]                     \n",
+      "                                                                 dence2[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_2 (Dropout)             (None, 32)           0           lstm_1[0][0]                     \n",
+      "dence (Dense)                   (None, 16)           1040        merge2[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_3 (Dropout)             (None, 16)           0           dence1[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_4 (Dropout)             (None, 16)           0           dence2[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 64)           0           dropout_2[0][0]                  \n",
-      "                                                                 dropout_3[0][0]                  \n",
-      "                                                                 dropout_4[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           1040        concatenate_2[0][0]              \n",
-      "__________________________________________________________________________________________________\n",
-      "dropout_5 (Dropout)             (None, 16)           0           dence[0][0]                      \n",
-      "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            34          dropout_5[0][0]                  \n",
+      "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
       "Total params: 1,213,042\n",
       "Trainable params: 1,213,042\n",
@@ -328,35 +318,35 @@
     }
    ],
    "source": [
-    "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
+    "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
     "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
-    "o1_input = Input(shape=(1,), name='input_other1')\n",
-    "o2_input = Input(shape=(1,), name='input_other2')\n",
+    "o1_input = Input(shape=(1,), name='Input_other1')\n",
+    "o2_input = Input(shape=(1,), name='Input_other2')\n",
     "\n",
     "#テキストとタグの学習\n",
-    "x = concatenate([p_input, t_input])\n",
-    "em = Embedding(input_dim=20000, output_dim=60, input_length=60)(x)\n",
-    "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(d_em)\n",
-    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "x = concatenate([p_input, t_input], name='merge1')\n",
+    "em = Embedding(input_dim=20000, output_dim=60, input_length=60, name='Embedding')(x)\n",
+    "#d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(em)\n",
+    "#d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
     "#3つ目のデータ学習\n",
     "i3 = Dense(16, activation='relu', name='dence1')(o1_input)\n",
-    "d_i3 = Dropout(0.5)(i3)\n",
+    "#d_i3 = Dropout(0.5)(i3)\n",
     "\n",
     "#4つ目のデータ学習\n",
     "i4 = Dense(16, activation='relu', name='dence2')(o2_input)\n",
-    "d_i4 = Dropout(0.5)(i4)\n",
+    "#d_i4 = Dropout(0.5)(i4)\n",
     "\n",
-    "x2 = concatenate([d_lstm_out, d_i3, d_i4])\n",
+    "x2 = concatenate([lstm_out, i3, i4], name='merge2')\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
-    "d_m2 = Dropout(0.5)(m2)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
+    "#d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
     "\n",
     "model = Model(inputs=[p_input, t_input, o1_input, o2_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model7.png')\n",
+    "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model7.png')\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
