--- a/Model8.ipynb
+++ b/Model8.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -285,21 +285,38 @@
       "==================================================================================================\n",
       "input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
+      "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           10624       embedding_2[0][0]                \n",
+      "concatenate_9 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
+      "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "input_ids (InputLayer)          (None, 1)            0                                            \n",
+      "embedding_5 (Embedding)         (None, 60, 60)       1200000     concatenate_9[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 33)           0           lstm_2[0][0]                     \n",
-      "                                                                 input_ids[0][0]                  \n",
+      "input_id (InputLayer)           (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 64)           2176        concatenate_2[0][0]              \n",
+      "input_image (InputLayer)        (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            130         dence[0][0]                      \n",
+      "input_postdate (InputLayer)     (None, 2)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "lstm_5 (LSTM)                   (None, 32)           11904       embedding_5[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "user_dence (Dense)              (None, 16)           32          input_id[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "image_dence (Dense)             (None, 16)           32          input_image[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "pdate_dence (Dense)             (None, 16)           48          input_postdate[0][0]             \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_10 (Concatenate)    (None, 80)           0           lstm_5[0][0]                     \n",
+      "                                                                 user_dence[0][0]                 \n",
+      "                                                                 image_dence[0][0]                \n",
+      "                                                                 pdate_dence[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "dence (Dense)                   (None, 16)           1296        concatenate_10[0][0]             \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
-      "Total params: 1,012,930\n",
-      "Trainable params: 1,012,930\n",
+      "Total params: 1,213,346\n",
+      "Trainable params: 1,213,346\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -309,7 +326,7 @@
     "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
     "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
     "u_input = Input(shape=(1,), name='input_id')\n",
-    "i_input = nput(shape=(1,), name='input_image')\n",
+    "i_input = Input(shape=(1,), name='input_image')\n",
     "d_input = Input(shape=(2,), name='input_postdate')\n",
     "\n",
     "#テキストとタグの学習\n",
@@ -320,15 +337,15 @@
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
     "#3つ目のデータ学習\n",
-    "user = Dense(16, activation='relu', name='dence1')(u_input)\n",
+    "user = Dense(16, activation='relu', name='user_dence')(u_input)\n",
     "d_user = Dropout(0.5)(user)\n",
     "\n",
     "#4つ目のデータ学習\n",
-    "image = Dense(16, activation='relu', name='dence1')(i_input)\n",
+    "image = Dense(16, activation='relu', name='image_dence')(i_input)\n",
     "d_image = Dropout(0.5)(image)\n",
     "\n",
     "#5つ目のデータ学習\n",
-    "pdate = Dense(16, activation='relu', name='dence1')(d_input)\n",
+    "pdate = Dense(16, activation='relu', name='pdate_dence')(d_input)\n",
     "d_pdate = Dropout(0.5)(pdate)\n",
     "\n",
     "x2 = concatenate([d_lstm_out, d_user, d_image, d_pdate])\n",
@@ -336,10 +353,10 @@
     "d_m2 = Dropout(0.5)(m2)\n",
     "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
-    "model = Model(inputs=[p_input, t_input, o_input], outputs = output)\n",
+    "model = Model(inputs=[p_input, t_input, u_input, i_input, d_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model8.png')\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model8.png')\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
